Basic wording changes

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>ActiveBox</title>
+    <title>The Breathe Easy - Yoga and Lifestyle Centre</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -28,11 +28,11 @@
                 <a class="logo" href="#"><img src="images/logo.png" alt=""></a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
-                        <li><a href="#features">Features</a></li>
-                        <li><a href="#works">Works</a></li>
+                        <li><a href="#features">About</a></li>
+                        <li><a href="#works">Yoga</a></li>
                         <li><a href="#teams">Our Team</a></li>
-                        <li><a href="#testimonials">Testimonials</a></li>
-                        <li><a href="#download">Download</a></li>
+                        <li><a href="#testimonials">Class Schedule</a></li>
+                        <li><a href="#download">Contact</a></li>
                     </ul>
                 </nav>
                 <a href="#" class="nav-toggle">Menu<span></span></a>
@@ -41,7 +41,7 @@
         <div class="container">
             <div class="col-md-10 col-md-offset-1">
                 <div class="banner-text text-center">
-                    <h1>Your Favorite One Page Multi Purpose Template</h1>
+                    <h1>The Breathe Easy: Yoga and Lifestyle Centre</h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</p>
                     <a href="#" class="btn btn-large">Find out more</a>
                 </div><!-- banner text -->
