--- a/index.html
+++ b/index.html
@@ -343,7 +343,8 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="col-md-12">
-                    <p>Copyright © 2015 ActiveBox. All Rights Reserved<br>Made with <i class="fa fa-heart pulse"></i> by <a href="http://kamalchaneman.com/">Kamal Chaneman</a></p>
+                    <p>Inhale the future, exhale the past <br/>
+			    <i class="fa fa-heart pulse"></i>
                 </div>
             </div>
         </div>
