--- a/index.html
+++ b/index.html
@@ -199,8 +199,8 @@
                     <div class="person">
                         <img src="images/team-1.jpg" alt="" class="img-responsive">
                         <div class="person-content">
-                            <h4>Ruth Wood</h4>
-                            <h5 class="role">Founder, CEO</h5>
+                            <h4>Kylie Coleman</h4>
+                            <h5 class="role">Yoga Lady</h5>
                             <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
                         </div>
                         <ul class="social-icons clearfix">
@@ -322,7 +322,7 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h5>Location</h5>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <p>14 Chardonnay Credcent<br>Hurlingham Manor, Johannesburg 2191</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h5>Share with Love</h5>
