--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="utf-8">
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>The Breathe Easy - Yoga and Lifestyle Centre</title>
+    <title>The Breathe Easy Yoga</title>
     <link rel="apple-touch-icon" sizes="180x180" href="apple-icon-180x180.png">
     <link rel="icon" type="image/png" sizes="192x192" href="android-icon-192x192.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
@@ -25,7 +25,7 @@
 	<section class="banner" role="banner">
         <header id="header">
             <div class="header-content clearfix">
-                <a class="logo" href="#"><img src="images/logo.png" alt=""></a>
+                <a class="logo" href="#">The Breathe Easy</a>
                 <nav class="navigation" role="navigation">
                     <ul class="primary-nav">
                         <li><a href="#features">About</a></li>
@@ -41,9 +41,10 @@
         <div class="container">
             <div class="col-md-10 col-md-offset-1">
                 <div class="banner-text text-center">
-                    <h1>The Breathe Easy: Yoga and Lifestyle Centre</h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent commodo cursus magna vel scelerisque nisl consectetur et.</p>
-                    <a href="#" class="btn btn-large">Find out more</a>
+                    <h1>The Breathe Easy</h1>
+                    <h1> Yoga Centre</h1>
+                    <p>“Yoga is the journey of the self, through the self, to the self.” - The Bhagavad Gita
+                    </p>
                 </div><!-- banner text -->
             </div>
         </div>
@@ -54,43 +55,48 @@
                 <div class="col-md-4 col-sm-6 feature text-center">
                     <span class="icon icon-tools"></span>
                     <div class="feature-content">
-                        <h5>Easily Customised</h5>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <h5>Learn</h5>
+                        <p>Classes range from beginner to intermediate, group or private, studio-based or at your home; perfect for those looking for some much-needed me-time.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 feature text-center">
                     <span class="icon icon-desktop"></span>
                     <div class="feature-content">
-                        <h5>Responsive Ready</h5>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <h5>Journey</h5>
+                        <p>The journey of self-discovery is the most important journey we can take. It is about finding yourself, accepting yourself and expressing that divine power within; uncovering and tapping into the very best we can be. It is a lifelong journey and it all starts with a single step; onto the mat.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 feature text-center">
                     <span class="icon icon-lightbulb"></span>
                     <div class="feature-content">
-                        <h5>Modern Design</h5>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <h5>Approach</h5>
+                        <p>
+                            The Breathe Easy is my home-based yoga studio situated in the heart of Sandton. It is a safe-haven for you to let go of it all. It is a place where you can finally breathe easy knowing that your happiness, health and wellbeing is top priority. The Breathe Easy is also mobile. Can’t come to the studio? Let me bring The Breath Easy to you.
+
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 feature text-center">
                     <span class="icon icon-genius"></span>
                     <div class="feature-content">
-                        <h5>Clean Code</h5>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <h5>Focus</h5>
+                        <p>
+                            Yoga is a powerful tool that we can use to let go of the past, so we can focus on the present moment in a much more positive way. Yoga has the power to balance and to heal. It has the power to unite body, mind and spirit so that we may experience the present moment in perfect harmony, with complete clarity and contentment.
+                        </p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 feature text-center">
                     <span class="icon icon-briefcase"></span>
                     <div class="feature-content">
-                        <h5>Ready to Ship</h5>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <h5>Embrace</h5>
+                        <p>One important thing to keep top of mind as we navigate through this complex world is that the happiness we are continuously searching for in this life is already within us. We just need to take the time to uncover and embrace it. So what are you waiting for? Embrace it all.</p>
                     </div>
                 </div>
                 <div class="col-md-4 col-sm-6 feature text-center">
                     <span class="icon icon-download"></span>
                     <div class="feature-content">
-                        <h5>Download for Free</h5>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Nullam quis risus eget urna mollis ornare vel eu leo. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <h5>Join</h5>
+                        <p></p>
                     </div>
                 </div>
             </div>
@@ -101,12 +107,11 @@
         <div class="container-fluid">
             <div class="row no-gutter">
                 <div class="col-lg-3 col-md-6 col-sm-6 work">
-                    <a href="images/work-1.jpg" class="work-box">
-                        <img src="images/work-1.jpg" alt="">
+                    <a href="images/yoga1.jpg" class="work-box">
+                        <img src="images/yoga1.jpg" height="350px" alt="">
                         <div class="overlay">
                             <div class="overlay-caption">
-                                <h5>Project Name</h5>
-                                <p>Website Design</p>
+                                <h5>Yin Yoga Events</h5>
                             </div>
                         </div><!-- overlay -->
                     </a>
@@ -116,8 +121,7 @@
                         <img src="images/work-2.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-caption">
-                                <h5>Project Name</h5>
-                                <p>Website Design</p>
+                                <h5>Studio Classes</h5>
                             </div>
                         </div><!-- overlay -->
                     </a>
@@ -127,8 +131,7 @@
                         <img src="images/work-3.jpg" alt="">
                         <div class="overlay">
                             <div class="overlay-caption">
-                                <h5>Project Name</h5>
-                                <p>Website Design</p>
+                                <h5>Private Classes</h5>
                             </div>
                         </div><!-- overlay -->
                     </a>
@@ -139,7 +142,6 @@
                         <div class="overlay">
                             <div class="overlay-caption">
                                 <h5>Project Name</h5>
-                                <p>Website Design</p>
                             </div>
                         </div><!-- overlay -->
                     </a>
@@ -203,65 +205,10 @@
                             <h5 class="role">Founder, CEO</h5>
                             <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
                         </div>
-                        <ul class="social-icons clearfix">
-                            <li><a href="#"><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#"><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#"><span class="fa fa-linkedin"></span></a></li>
-                            <li><a href="#"><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#"><span class="fa fa-dribbble"></span></a></li>
-                        </ul>
+      
                     </div><!-- person -->
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="person">
-                        <img src="images/team-2.jpg" alt="" class="img-responsive">
-                        <div class="person-content">
-                            <h4>Timothy Reed</h4>
-                            <h5 class="role">Co-Founder, Developer</h5>
-                            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-                        </div>
-                        <ul class="social-icons clearfix">
-                            <li><a href="#" class=""><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-linkedin"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-dribbble"></span></a></li>
-                        </ul>
-                    </div><!-- person -->
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="person">
-                        <img src="images/team-3.jpg" alt="" class="img-responsive">
-                        <div class="person-content">
-                            <h4>Victoria Valdez</h4>
-                            <h5 class="role">UI Designer</h5>
-                            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-                        </div>
-                        <ul class="social-icons clearfix">
-                            <li><a href="#" class=""><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-linkedin"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-dribbble"></span></a></li>
-                        </ul>
-                    </div><!-- person -->
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="person">
-                        <img src="images/team-4.jpg" alt="" class="img-responsive">
-                        <div class="person-content">
-                            <h4>Beverly Little</h4>
-                            <h5 class="role">Data Scientist</h5>
-                            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-                        </div>
-                        <ul class="social-icons clearfix">
-                            <li><a href="#" class=""><span class="fa fa-facebook"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-twitter"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-linkedin"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-google-plus"></span></a></li>
-                            <li><a href="#" class=""><span class="fa fa-dribbble"></span></a></li>
-                        </ul>
-                    </div><!-- person -->
+             
                 </div>
             </div>
         </div>
@@ -306,36 +253,24 @@
         </div>
     </section><!-- testimonials -->
 
-    <section id="download" class="section download">
-        <div class="container">
-            <div class="col-md-8 col-md-offset-2 text-center">
-                <h3>Are You Ready to Start? Download Now For Free!</h3>
-                <p>Fusce dapibus, tellus ac cursus commodo</p>
-                <a href="https://github.com/kamalcha/ActiveBox/archive/master.zip" class="btn btn-large">Download for Free</a>
-            </div>
-        </div>
-    </section><!-- download -->
-
     <footer class="footer">
         <div class="footer-top">
             <div class="container">
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h5>Location</h5>
-                        <p>3481 Melrose Place<br>Beverly Hills, CA 90210</p>
+                        <p>14 Chardonnay Crescent <br/> Hurlingham Manor, Sandton</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h5>Share with Love</h5>
                         <ul class="footer-share">
                             <li><a href="#"><i class="fa fa-facebook"></i></a></li>
                             <li><a href="https://twitter.com/kamal_chaneman"><i class="fa fa-twitter"></i></a></li>
-                            <li><a href="https://www.linkedin.com/in/kamalchaneman"><i class="fa fa-linkedin"></i></a></li>
-                            <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h5>About ActiveBox</h5>
-                        <p>Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec ullamcorper nulla non metus auctor fringilla.</p>
+                        <h5>About The Breathe Easy</h5>
+                        <p>Classes range from beginner to intermediate, group or private, studio-based or at your home; perfect for those looking for some much-needed me-time.</p>
                     </div>
                 </div>
             </div>
@@ -343,7 +278,8 @@
         <div class="footer-bottom">
             <div class="container">
                 <div class="col-md-12">
-                    <p>Copyright © 2015 ActiveBox. All Rights Reserved<br>Made with <i class="fa fa-heart pulse"></i> by <a href="http://kamalchaneman.com/">Kamal Chaneman</a></p>
+                    <p>Inhale the future, exhale the past </p>
+                    <i class="fa fa-heart pulse"></i>
                 </div>
             </div>
         </div>
