--- a/index.html
+++ b/index.html
@@ -45,214 +45,14 @@
                     <h1> Yoga Centre</h1>
                     <p>“Yoga is the journey of the self, through the self, to the self.” - The Bhagavad Gita
                     </p>
+				  <h1>Website Coming Soon</h1>
                 </div><!-- banner text -->
             </div>
         </div>
     </section><!-- banner -->
-    <section id="features" class="features section">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4 col-sm-6 feature text-center">
-                    <span class="icon icon-tools"></span>
-                    <div class="feature-content">
-                        <h5>Learn</h5>
-                        <p>Classes range from beginner to intermediate, group or private, studio-based or at your home; perfect for those looking for some much-needed me-time.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 feature text-center">
-                    <span class="icon icon-desktop"></span>
-                    <div class="feature-content">
-                        <h5>Journey</h5>
-                        <p>The journey of self-discovery is the most important journey we can take. It is about finding yourself, accepting yourself and expressing that divine power within; uncovering and tapping into the very best we can be. It is a lifelong journey and it all starts with a single step; onto the mat.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 feature text-center">
-                    <span class="icon icon-lightbulb"></span>
-                    <div class="feature-content">
-                        <h5>Approach</h5>
-                        <p>
-                            The Breathe Easy is my home-based yoga studio situated in the heart of Sandton. It is a safe-haven for you to let go of it all. It is a place where you can finally breathe easy knowing that your happiness, health and wellbeing is top priority. The Breathe Easy is also mobile. Can’t come to the studio? Let me bring The Breath Easy to you.
+   
 
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 feature text-center">
-                    <span class="icon icon-genius"></span>
-                    <div class="feature-content">
-                        <h5>Focus</h5>
-                        <p>
-                            Yoga is a powerful tool that we can use to let go of the past, so we can focus on the present moment in a much more positive way. Yoga has the power to balance and to heal. It has the power to unite body, mind and spirit so that we may experience the present moment in perfect harmony, with complete clarity and contentment.
-                        </p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 feature text-center">
-                    <span class="icon icon-briefcase"></span>
-                    <div class="feature-content">
-                        <h5>Embrace</h5>
-                        <p>One important thing to keep top of mind as we navigate through this complex world is that the happiness we are continuously searching for in this life is already within us. We just need to take the time to uncover and embrace it. So what are you waiting for? Embrace it all.</p>
-                    </div>
-                </div>
-                <div class="col-md-4 col-sm-6 feature text-center">
-                    <span class="icon icon-download"></span>
-                    <div class="feature-content">
-                        <h5>Join</h5>
-                        <p></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section><!-- features -->
-
-    <section id="works" class="works section no-padding">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="col-lg-3 col-md-6 col-sm-6 work">
-                    <a href="images/yoga1.jpg" class="work-box">
-                        <img src="images/yoga1.jpg" height="350px" alt="">
-                        <div class="overlay">
-                            <div class="overlay-caption">
-                                <h5>Yin Yoga Events</h5>
-                            </div>
-                        </div><!-- overlay -->
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 work">
-                    <a href="images/work-2.jpg" class="work-box">
-                        <img src="images/work-2.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-caption">
-                                <h5>Studio Classes</h5>
-                            </div>
-                        </div><!-- overlay -->
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 work">
-                    <a href="images/work-3.jpg" class="work-box">
-                        <img src="images/work-3.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-caption">
-                                <h5>Private Classes</h5>
-                            </div>
-                        </div><!-- overlay -->
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 work">
-                    <a href="images/work-4.jpg" class="work-box">
-                        <img src="images/work-4.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-caption">
-                                <h5>Project Name</h5>
-                            </div>
-                        </div><!-- overlay -->
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 work">
-                    <a href="images/work-5.jpg" class="work-box">
-                        <img src="images/work-5.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-caption">
-                                <h5>Project Name</h5>
-                                <p>Website Design</p>
-                            </div>
-                        </div><!-- overlay -->
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 work">
-                    <a href="images/work-6.jpg" class="work-box">
-                        <img src="images/work-6.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-caption">
-                                <h5>Project Name</h5>
-                                <p>Website Design</p>
-                            </div>
-                        </div><!-- overlay -->
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 work">
-                    <a href="images/work-7.jpg" class="work-box">
-                        <img src="images/work-7.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-caption">
-                                <h5>Project Name</h5>
-                                <p>Website Design</p>
-                            </div>
-                        </div><!-- overlay -->
-                    </a>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6 work">
-                    <a href="images/work-8.jpg" class="work-box">
-                        <img src="images/work-8.jpg" alt="">
-                        <div class="overlay">
-                            <div class="overlay-caption">
-                                <h5>Project Name</h5>
-                                <p>Website Design</p>
-                            </div>
-                        </div><!-- overlay -->
-                    </a>
-                </div>
-            </div>
-        </div>
-    </section><!-- works -->
-
-    <section id="teams" class="section teams">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-3 col-sm-6">
-                    <div class="person">
-                        <img src="images/team-1.jpg" alt="" class="img-responsive">
-                        <div class="person-content">
-                            <h4>Ruth Wood</h4>
-                            <h5 class="role">Founder, CEO</h5>
-                            <p>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Maecenas sed diam eget risus varius blandit sit amet non magna. Nullam quis risus eget urna mollis ornare vel eu leo.</p>
-                        </div>
-      
-                    </div><!-- person -->
-                </div>
-             
-                </div>
-            </div>
-        </div>
-    </section><!-- teams -->
-
-    <section id="testimonials" class="section testimonials no-padding">
-        <div class="container-fluid">
-            <div class="row no-gutter">
-                <div class="flexslider">
-                    <ul class="slides">
-                        <li>
-                            <div class="col-md-6">
-                                <div class="avatar">
-                                    <img src="images/testimonial-1.jpg" alt="" class="img-responsive">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <blockquote>
-                                    <p>"Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Donec sed odio dui. Aenean eu leo quam..."
-                                    </p>
-                                    <cite class="author">Susan Sims, Interaction Designer at XYZ</cite>
-                                </blockquote>
-                            </div>
-                        </li>
-                        <li>
-                            <div class="col-md-6">
-                                <div class="avatar">
-                                    <img src="images/testimonial-2.jpg" alt="" class="img-responsive">
-                                </div>
-                            </div>
-                            <div class="col-md-6">
-                                <blockquote>
-                                    <p>"Cras mattis consectetur purus sit amet fermentum. Donec sed odio dui. Aenean lacinia bibendum nulla sed consectetur...."
-                                    </p>
-                                    <cite class="author">Susan Sims, Interaction Designer at XYZ</cite>
-                                </blockquote>
-                            </div>
-                        </li>
-                    </ul>
-                </div><!-- flexslider -->
-            </div>
-        </div>
-    </section><!-- testimonials -->
-
+   
     <footer class="footer">
         <div class="footer-top">
             <div class="container">
